# advent-of-code-2024

./: .gitignore  pyproject.toml
.github/workflows/: lint_and_test.yaml
day01/: main.py
day02/: main.py
day03/: main.py
day04/: main.py
day05/: main.py
day06/: main.py
day07/: main.py
day08/: main.py
src/: template.py
src/day01/: main.py
src/day02/: main.py
src/day03/: main.py
src/day04/: main.py
src/day05/: main.py
src/day06/: main.py
src/day07/: main.py
src/day08/: main.py
src/day09/: main.py
src/day10/: main.py  rating_large.txt  rating_medium.txt  rating_small.txt  score_branching.txt  score_double.txt  score_two.txt
src/day11/: main.py
src/day12/: main.py
src/day13/: main.py
src/day14/: main.py
src/day15/: main.py
src/day16/: main.py
src/day17/: main.py
src/day18/: main.py
src/day19/: main.py
tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py
utils/: geometry.py  input.py
