[project]
name = "2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pathlib>=1.0.1",
    "ruff>=0.8.2",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]
