[project]
name = "2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pathlib>=1.0.1",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
pythonpath = [
    "src", "utils"
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
lint = [
    "ruff>=0.8.2",
]
